--- a/Controles/Controles.csproj
+++ b/Controles/Controles.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="NSDatePicker.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="NSTextBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -74,6 +77,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -87,6 +91,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\calendario-de-primavera.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\calendario-de-primavera %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\calendarioNegro.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\calendarioBlanco.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\calendario.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\calendari.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
