--- a/Controles/Controles.csproj
+++ b/Controles/Controles.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="NSButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="NSTextBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
