--- a/Controles/Controles.csproj
+++ b/Controles/Controles.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="NSCircularPictureBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="NSDatePicker.cs">
       <SubType>Component</SubType>
     </Compile>
