--- a/Controles/Controles.csproj
+++ b/Controles/Controles.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TextPosition.cs" />
     <Compile Include="ColoresARGB.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -64,6 +65,9 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="NSDatePicker.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="NSProgressBar.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="NSRadioButton.cs">
