--- a/Controles/Controles.csproj
+++ b/Controles/Controles.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{058F6493-16FE-47FC-B61C-94035F931F3A}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Controles</RootNamespace>
     <AssemblyName>Controles</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,11 +51,11 @@
   <ItemGroup>
     <Compile Include="MiTextPosition.cs" />
     <Compile Include="ColoresARGB.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormControls.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormControls.Designer.cs">
+      <DependentUpon>FormControls.cs</DependentUpon>
     </Compile>
     <Compile Include="NSButton.cs">
       <SubType>Component</SubType>
@@ -80,8 +83,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormControls.resx">
+      <DependentUpon>FormControls.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NSTextBox.resx">
       <DependentUpon>NSTextBox.cs</DependentUpon>
